fix: spacing for form on account pages

--- a/src/blocks/account/__link/account__link.css
+++ b/src/blocks/account/__link/account__link.css
@@ -17,5 +17,6 @@
   .account__link {
     font-size: 12px;
     line-height: 15px;
+    padding-bottom: 42px;
   }
 }
